# rgbd-camera-interface-ros1

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  package.xml
config/: camera_params.yaml
docker/noetic/: Dockerfile  Makefile  docker-compose.yml
examples/: calibration.yaml  camera_test.cpp
hardware/: README.md
include/rgbd-camera-interface/: rgbd-camera-interface.h
launch/: camera.launch
src/: main.cpp  rgbd-camera-interface.cpp
srv/: CameraControl.srv
