<?xml version="1.0"?>
<package format="2">
  <name>rgbd_camera_interface</name>
  <version>0.1.0</version>
  <description>ROS interface for Waveshare Binocular Camera Module</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
</package>
